# LAB-SYSTEMS

./: CMakeLists.txt  README.md  WordsList.txt  main.cpp
src/: LinkedList.cpp  LinkedList.h
